RemoveFormat command doesn't remove background color https://bugs.webkit.org/show_bug.cgi?id=101682

Reviewed by Tony Chang.

Source/WebCore:

Fixed the bug by removing all non-transparent background-color properties.

Test: editing/execCommand/remove-format-background-color.html

* editing/RemoveFormatCommand.cpp:
(WebCore::RemoveFormatCommand::doApply):

LayoutTests:

Added a regression test.

* editing/execCommand/remove-format-background-color-expected.txt: Added.
* editing/execCommand/remove-format-background-color.html: Added.


Canonical link: https://commits.webkit.org/119878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134096 268f45cc-cd09-0410-ab3c-d52691b4dbfc