Source/WebCore/editing/RemoveFormatCommand.cpp
@@ -28,6 +28,7 @@
 #include "RemoveFormatCommand.h"
 
 #include "ApplyStyleCommand.h"
+#include "CSSValueKeywords.h"
 #include "EditingStyle.h"
 #include "Element.h"
 #include "Frame.h"
@@ -86,6 +87,10 @@ void RemoveFormatCommand::doApply()
     // content that we're operating on.
     Node* root = frame->selection()->rootEditableElement();
     RefPtr<EditingStyle> defaultStyle = EditingStyle::create(root);
+
+    // We want to remove everything but transparent background.
+    // FIXME: We shouldn't access style().
+    defaultStyle->style()->setProperty(CSSPropertyBackgroundColor, CSSValueTransparent);
 
     applyCommandToComposite(ApplyStyleCommand::create(document(), defaultStyle.get(), isElementForRemoveFormatCommand, editingAction()));
 }
